2005-02-18  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm:  Allow "lw" as an abbreviation for "linewidth"
	* term/post.trm: Make dash styles 6 and 7 a bit more distinctive
	* term/emf.trm:  Add option 'set term emf {linewidth <factor>}'
	* term/gd.trm:   Solid fill with density < 1 was not working with 
			 rgb colors.  Trivial fix.
	* term/gd.trm:   Add option 'set term ... {linewidth <factor>}';
			 increase maximum linewidth from 6 to 12

	* src/graphics.c (boundary): When estimating the length and height
	of xlabel, increase the number of lines by one if we're in enhanced text
	mode and there seems to be a subscript. This test can be fooled if the
	label has disabled enhanced text processing.

2005-02-18  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/command.c src/tables.c src/set.c src/unset.c docs/gnuplot.doc: Let
	command '{un}set historysize' be always available, but report a
	descriptive error if gnuplot has not been configured with GNU readline.

2005-02-17  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Add terminal options for monochrome and for dashed
	lines:
	    set term pdf {mono|color|colour} {solid|dashed {dl dashlength}}

	The defaults remain the same as before (color solid). The monochrome
	option only affects linetypes; you can still use color explicitly
	in filled areas or by using rgb specifications for line styles.

	* configure.in: Check for dashed line support in pdflib.

2005-02-16  Harald Harders  <h.harders@tu-bs.de>

	* term/post.trm: Patch #1122014 "Improve dashed linetypes in Postscript
	terminals".
	
2005-02-16  Ethan Merritt  <merritt@u.washington.edu>

	* term/pdf.trm: Correct the driver docs to say font limitations
	and font installation instructions must be sought in the pdflib
	documention.

2005-02-16  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* src/variable.c (loadpath_handler, fontpath_handler):
	Re-initialize limit to NULL, too, as p reaches it.
